<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:orientation="vertical"
                    android:translationX="0dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="102dp"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="@string/textView"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="30sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView3" />

                    <EditText
                        android:id="@+id/n1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:maxLines="3"
                        />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView4" />

                    <EditText
                        android:id="@+id/n2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView5" />

                    <EditText
                        android:id="@+id/n3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="#.##"
                        android:maxLength="3"/>

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView11" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView7" />

                    <EditText
                        android:id="@+id/n4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView8" />

                    <EditText
                        android:id="@+id/n5"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView9" />

                    <EditText
                        android:id="@+id/n6"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="#.##"
                        android:maxLength="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="107dp"
                        app:srcCompat="@drawable/edi" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView16" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView17" />

                    <EditText
                        android:id="@+id/n7"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView18" />

                    <EditText
                        android:id="@+id/n8"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textView19" />

                    <EditText
                        android:id="@+id/n9"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/def3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="#.##"
                        android:maxLength="3"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="222dp"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            style="@android:style/Widget.ImageButton"
                            android:layout_width="122dp"
                            android:layout_height="54dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="0dp"
                            android:adjustViewBounds="true"
                            android:onClick="acerca"
                            android:padding="0dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/acerca" />

                        <ImageButton

                            android:id="@+id/imageButton2"
                            style="@android:style/Widget.ImageButton"
                            android:layout_width="118dp"
                            android:layout_height="54dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="0dp"
                            android:adjustViewBounds="true"
                            android:onClick="calcular"
                            android:padding="0dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/edi" />

                    </LinearLayout>

                </LinearLayout>
            </GridLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>