<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorge.notasaplicacion.AcercaDe">

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:fontFamily="cursive"
            android:gravity="center|fill"
            android:text="@string/textView6"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="21dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="254dp"
                android:layout_height="116dp"
                android:layout_weight="0.75"
                android:gravity="fill"
                android:text="@string/textView14"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="23dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="329dp"
                android:layout_height="124dp"
                android:gravity="center"
                android:text="@string/textView26"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="196dp"
            android:layout_height="191dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    app:srcCompat="@drawable/notas" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:onClick="salir"
                    android:text="@string/button2"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="TextView"
                    android:layout_weight="0.21" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
